Fix banner and spacing in abot

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -238,6 +238,8 @@ a:focus,
 }
 .intro img {
   width: 100%;
+  height: 700px;
+  object-fit: contain;
 }
 header .intro-text {
   padding-top: 350px;
@@ -271,6 +273,7 @@ header .intro-text {
 }
 #about .video-about {
   width: 300rem;
+  margin-right: 2rem;
 }
 #about .about-text li {
   margin-bottom: 6px;
@@ -629,6 +632,7 @@ label {
   }
   #about .video-about {
     width: 100%;
+    margin-right: 2rem;
     margin-bottom: 3rem;
   }
 }
